# mslearn-ai-governance

./: .gitignore  README.md  _config.yml  index.md
workshop/: 1. llm-backend-onboarding-runner.ipynb  2. citadel-access-contracts-tests.ipynb  2. citadel-universal-llm-api-all-models-tests.ipynb  3. citadel-access-contracts-tests.ipynb  3. citadel-agent-frameworks-tests.ipynb  4. citadel-agent-frameworks-tests.ipynb  4. citadel-unified-ai-api-tests.ipynb  5. citadel-pii-processing-tests.ipynb  6. citadel-unified-ai-api-tests.ipynb  7. citadel-hosted-agent-deploy.ipynb  7. citadel-hosted-agent-with-agt.ipynb  8. citadel-hosted-agent-agt.ipynb  8. publish-and-use-a2a-endpoint.ipynb  9. publish-and-use-hr-mcp-via-apim.ipynb  guided-workshop-prompt.md  keyvault-rbac.bicep  lab-setup.md  main.bicep  main.workshop.bicepparam  model-pricing.json  pyproject.toml  readme.md  requirements.txt  workshop-lab-guide.md
workshop/bicep/infra/: main.workshop.bicepparam
workshop/governed-agent/: Dockerfile  agent.yaml  governance.py  main.py  requirements.txt
workshop/governed-agent/policies/: governance-policy.yaml
workshop/hosted-agent/: Dockerfile  agent.yaml  main.py  requirements.txt
workshop/hosted-agent/policies/: hr-policy.yaml
workshop/mcp-hr/: hr-mcp-implementation-plan.md
workshop/mcp-hr/hosted-agent/: Dockerfile  agent.yaml  main.py  requirements.txt
workshop/scripts/: cleanup-apim-defaults.ps1  cleanup-apim-defaults.sh  deploy-spoke-foundry.ps1  deploy-spoke-foundry.sh  import-model-pricing.py  model-pricing.json  run-all-notebooks.ps1  run-all-notebooks.sh
(+86 files in other folders)
